generate artist every minute + style changes

--- a/client/views/hello.html
+++ b/client/views/hello.html
@@ -1,9 +1,9 @@
 <template name="hello">
   	{{#each obj}}
-	  	<p>
+	  	<div class="artist">
 	  		<!-- <img src="{{avatar.im}}"/> -->
 	  		<img src="{{avatar.int}}"/>
-	  		time: {{time}} result: {{text}}
-	  	</p>
+	  		{{{text}}}
+	  	</div>
   	{{/each}}
 </template>
